--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-.DS_Store, git-credential-osxkeychain
+.DS_Store
+git-credential-osxkeychain
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
